changes to undefined error

--- a/index.html
+++ b/index.html
@@ -27,32 +27,32 @@
       <tbody id="table">
         <tr class="row" id="8">
           <th scope="row">08:00 AM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text"></td>
-          <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text" onfocus="if(this.value=='A new value') this.value='';"> Hello </td>
+          <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"> </i></button></td>
         </tr>
         <tr class="row" id="9">
           <th scope="row">09:00 AM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text1"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text1"> </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="10">
           <th scope="row">10:00 AM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text2"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text2"> </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="11">
           <th scope="row">11:00 AM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text3"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text3">  </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="12">
           <th scope="row">12:00 PM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text4"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text4">  </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="13">
           <th scope="row">01:00 PM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text5"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text5"> </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="14">
@@ -62,7 +62,7 @@
         </tr>
         <tr class="row" id="15">
           <th scope="row">03:00 PM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text7"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text7"> </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
         <tr class="row" id="16">
@@ -72,7 +72,7 @@
         </tr>
         <tr class="row" id="17">
           <th scope="row">05:00 PM</th>
-          <td class="editableText" contentEditable="true" colspan="3" id="text9"></td>
+          <td class="editableText" contentEditable="true" colspan="3" id="text9"> </td>
           <td><button class="saveBtn" onclick="saveEdits()"><i class="fas fa-lock"></i></button></td>
         </tr>
       </tbody>
